project/c_prog/pth-2.0.7/test_replace.log
   Compiling c2rust_out v0.0.0 (/home/c2rust/Desktop/c_prog/pth-2.0.7)
warning: unused `#[macro_use]` import
  --> c2rust-lib.rs:12:1
   |
12 | #[macro_use]
   | ^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused `#[macro_use]` import
  --> c2rust-lib.rs:14:19
   |
14 | extern crate f128;#[macro_use]
   |                   ^^^^^^^^^^^^

warning: unnecessary parentheses around assigned value
   --> test_httpd.rs:530:20
    |
530 |     sar.sin_port = ({
    |                    ^
...
548 |     });
    |      ^
    |
    = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
    |
530 ~     sar.sin_port = {
531 |         let mut __v: libc::c_ushort = 0;
  ...
547 |         __v
548 ~     };
    |

warning: crate-level attribute should be in the root module
  --> pth_attr.rs:10:1
   |
10 | #![feature(c_variadic)]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_attributes)]` on by default

warning: crate-level attribute should be in the root module
  --> pth_debug.rs:10:1
   |
10 | #![feature(c_variadic)]
   | ^^^^^^^^^^^^^^^^^^^^^^^

warning: crate-level attribute should be in the root module
  --> pth_event.rs:10:1
   |
10 | #![feature(c_variadic)]
   | ^^^^^^^^^^^^^^^^^^^^^^^

warning: crate-level attribute should be in the root module
  --> pth_high.rs:10:1
   |
10 | #![feature(asm)]
   | ^^^^^^^^^^^^^^^^

warning: crate-level attribute should be in the root module
  --> pth_lib.rs:10:1
   |
10 | #![feature(c_variadic)]
   | ^^^^^^^^^^^^^^^^^^^^^^^

warning: crate-level attribute should be in the root module
  --> pth_sched.rs:10:1
   |
10 | #![feature(asm)]
   | ^^^^^^^^^^^^^^^^

warning: crate-level attribute should be in the root module
  --> pth_string.rs:10:1
   |
10 | #![feature(c_variadic)]
   | ^^^^^^^^^^^^^^^^^^^^^^^

warning: crate-level attribute should be in the root module
  --> test_httpd.rs:10:1
   |
10 | #![feature(asm, extern_types)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: crate-level attribute should be in the root module
  --> test_misc.rs:10:1
   |
10 | #![feature(extern_types)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: crate-level attribute should be in the root module
  --> test_mp.rs:10:1
   |
10 | #![feature(extern_types)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: crate-level attribute should be in the root module
  --> test_philo.rs:10:1
   |
10 | #![feature(extern_types)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: crate-level attribute should be in the root module
  --> test_select.rs:10:1
   |
10 | #![feature(asm, extern_types)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: crate-level attribute should be in the root module
  --> test_sig.rs:10:1
   |
10 | #![feature(extern_types)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: crate-level attribute should be in the root module
  --> test_std.rs:10:1
   |
10 | #![feature(extern_types)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: the feature `asm` has been stable since 1.59.0 and no longer requires an attribute to enable
 --> c2rust-lib.rs:8:12
  |
8 | #![feature(asm)]
  |            ^^^
  |
  = note: `#[warn(stable_features)]` on by default

error[E0277]: the trait bound `pth_event::timeval: core::ffi::sealed_trait::VaArgSafe` is not satisfied
   --> pth_event.rs:602:37
    |
602 |         let mut tv: pth_time_t = ap.arg::<pth_time_t>();
    |                                     ^^^ the trait `core::ffi::sealed_trait::VaArgSafe` is not implemented for `pth_event::timeval`
    |
    = help: the following other types implement trait `core::ffi::sealed_trait::VaArgSafe`:
              *const T
              *mut T
              f64
              i16
              i32
              i64
              i8
              isize
            and 5 others
note: required by a bound in `VaListImpl::<'f>::arg`
   --> /home/c2rust/.rustup/toolchains/nightly-2022-08-08-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/ffi/mod.rs:510:26
    |
510 |     pub unsafe fn arg<T: sealed_trait::VaArgSafe>(&mut self) -> T {
    |                          ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `VaListImpl::<'f>::arg`

error[E0277]: the trait bound `pth_event::timeval: core::ffi::sealed_trait::VaArgSafe` is not satisfied
   --> pth_event.rs:645:36
    |
645 |         (*ev).ev_args.FUNC.tv = ap.arg::<pth_time_t>();
    |                                    ^^^ the trait `core::ffi::sealed_trait::VaArgSafe` is not implemented for `pth_event::timeval`
    |
    = help: the following other types implement trait `core::ffi::sealed_trait::VaArgSafe`:
              *const T
              *mut T
              f64
              i16
              i32
              i64
              i8
              isize
            and 5 others
note: required by a bound in `VaListImpl::<'f>::arg`
   --> /home/c2rust/.rustup/toolchains/nightly-2022-08-08-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/ffi/mod.rs:510:26
    |
510 |     pub unsafe fn arg<T: sealed_trait::VaArgSafe>(&mut self) -> T {
    |                          ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `VaListImpl::<'f>::arg`

error[E0277]: the trait bound `f128::f128: core::ffi::sealed_trait::VaArgSafe` is not satisfied
   --> pth_string.rs:345:43
    |
345 | ...                   fvalue = args.arg::<f128::f128>();
    |                                     ^^^ the trait `core::ffi::sealed_trait::VaArgSafe` is not implemented for `f128::f128`
    |
    = help: the following other types implement trait `core::ffi::sealed_trait::VaArgSafe`:
              *const T
              *mut T
              f64
              i16
              i32
              i64
              i8
              isize
            and 5 others
note: required by a bound in `VaListImpl::<'f>::arg`
   --> /home/c2rust/.rustup/toolchains/nightly-2022-08-08-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/ffi/mod.rs:510:26
    |
510 |     pub unsafe fn arg<T: sealed_trait::VaArgSafe>(&mut self) -> T {
    |                          ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `VaListImpl::<'f>::arg`

error[E0277]: the trait bound `f128::f128: core::ffi::sealed_trait::VaArgSafe` is not satisfied
   --> pth_string.rs:465:43
    |
465 | ...                   fvalue = args.arg::<f128::f128>();
    |                                     ^^^ the trait `core::ffi::sealed_trait::VaArgSafe` is not implemented for `f128::f128`
    |
    = help: the following other types implement trait `core::ffi::sealed_trait::VaArgSafe`:
              *const T
              *mut T
              f64
              i16
              i32
              i64
              i8
              isize
            and 5 others
note: required by a bound in `VaListImpl::<'f>::arg`
   --> /home/c2rust/.rustup/toolchains/nightly-2022-08-08-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/ffi/mod.rs:510:26
    |
510 |     pub unsafe fn arg<T: sealed_trait::VaArgSafe>(&mut self) -> T {
    |                          ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `VaListImpl::<'f>::arg`

error[E0277]: the trait bound `f128::f128: core::ffi::sealed_trait::VaArgSafe` is not satisfied
   --> pth_string.rs:472:43
    |
472 | ...                   fvalue = args.arg::<f128::f128>();
    |                                     ^^^ the trait `core::ffi::sealed_trait::VaArgSafe` is not implemented for `f128::f128`
    |
    = help: the following other types implement trait `core::ffi::sealed_trait::VaArgSafe`:
              *const T
              *mut T
              f64
              i16
              i32
              i64
              i8
              isize
            and 5 others
note: required by a bound in `VaListImpl::<'f>::arg`
   --> /home/c2rust/.rustup/toolchains/nightly-2022-08-08-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/ffi/mod.rs:510:26
    |
510 |     pub unsafe fn arg<T: sealed_trait::VaArgSafe>(&mut self) -> T {
    |                          ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `VaListImpl::<'f>::arg`

For more information about this error, try `rustc --explain E0277`.
warning: `c2rust_out` (lib) generated 18 warnings
error: could not compile `c2rust_out` due to 5 previous errors; 18 warnings emitted
